[gd_scene load_steps=13 format=3 uid="uid://dhfxmy0klwkrk"]

[ext_resource type="Script" uid="uid://c2jbdc04ys61f" path="res://Scripts/escena_2.gd" id="1_c0spx"]
[ext_resource type="Texture2D" uid="uid://cqndjae2sok7o" path="res://Assets/Escenas_inicio/Escena2/Brillo Vidas.png" id="2_ta02p"]
[ext_resource type="Texture2D" uid="uid://dgwnlopquplwd" path="res://Assets/Escenas_inicio/Escena2/Brillo Cuaderno.png" id="3_ykg05"]
[ext_resource type="Texture2D" uid="uid://dsib4muxe4vqp" path="res://Assets/Escenas_inicio/Escena2/Brillo PC.png" id="4_5jo5l"]
[ext_resource type="Texture2D" uid="uid://b32275uqx2oha" path="res://Assets/Escenas_inicio/Escena2/Jefe.png" id="5_jb0sr"]
[ext_resource type="Texture2D" uid="uid://yifymw3m7jb7" path="res://Assets/Escenas_inicio/Escena2/Dialogo.png" id="6_d8mro"]
[ext_resource type="FontFile" uid="uid://ju386i3tvfhc" path="res://Fonts/PatrickHand-Regular.ttf" id="7_q3xy6"]
[ext_resource type="Texture2D" uid="uid://ke4ltdcs4tle" path="res://Assets/Escenas_inicio/Escena2/Flecha.png" id="8_a46k3"]
[ext_resource type="Texture2D" uid="uid://02hyovd8iiuc" path="res://Assets/Escenas_inicio/Escena2/Flecha - hover.png" id="9_7cehn"]

[sub_resource type="Animation" id="Animation_c0spx"]
resource_name = "Dialogo1"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogo/RichTextLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 4, 10, 13, 19, 25, 39, 42, 50, 52, 55, 64, 68, 74, 77, 81, 90]
}

[sub_resource type="Animation" id="Animation_ta02p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Dialogo/RichTextLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ykg05"]
_data = {
&"Dialogo1": SubResource("Animation_c0spx"),
&"RESET": SubResource("Animation_ta02p")
}

[node name="Escena2" type="Node2D"]
script = ExtResource("1_c0spx")

[node name="BrilloPc" type="Sprite2D" parent="."]
position = Vector2(644, 361.99997)
scale = Vector2(0.67, 0.67)
texture = ExtResource("4_5jo5l")

[node name="BrilloCuaderno" type="Sprite2D" parent="."]
position = Vector2(644, 362)
scale = Vector2(0.67, 0.67)
texture = ExtResource("3_ykg05")

[node name="BrilloVidas" type="Sprite2D" parent="."]
position = Vector2(644, 362)
scale = Vector2(0.67, 0.67)
texture = ExtResource("2_ta02p")

[node name="Jefe" type="Sprite2D" parent="."]
position = Vector2(640.99994, 359)
scale = Vector2(0.67, 0.67)
texture = ExtResource("5_jb0sr")

[node name="Dialogo" type="Sprite2D" parent="."]
position = Vector2(641.99994, 359)
scale = Vector2(0.67, 0.67)
texture = ExtResource("6_d8mro")

[node name="RichTextLabel" type="RichTextLabel" parent="Dialogo"]
offset_left = -426.86554
offset_top = -388.0597
offset_right = 477.61206
offset_bottom = -108.9552
theme_override_colors/default_color = Color(0.29803923, 0.22745098, 0.13333334, 1)
theme_override_fonts/normal_font = ExtResource("7_q3xy6")
theme_override_font_sizes/normal_font_size = 51
text = "Acá tenes la compu donde seleccionarás la factura y te mostrará los datos de los clientes."
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_use_anchors_ = true

[node name="Dialogo2" type="Sprite2D" parent="."]
visible = false
position = Vector2(641.99994, 359)
scale = Vector2(0.67, 0.67)
texture = ExtResource("6_d8mro")

[node name="RichTextLabel" type="RichTextLabel" parent="Dialogo2"]
offset_left = -426.86554
offset_top = -388.0597
offset_right = 477.61206
offset_bottom = -108.9552
theme_override_colors/default_color = Color(0.29803923, 0.22745098, 0.13333334, 1)
theme_override_fonts/normal_font = ExtResource("7_q3xy6")
theme_override_font_sizes/normal_font_size = 51
text = "También te dejo un cuaderno donde podes tomar los apuntes que quieras."
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Dialogo3" type="Sprite2D" parent="."]
visible = false
position = Vector2(641.99994, 359)
scale = Vector2(0.67, 0.67)
texture = ExtResource("6_d8mro")

[node name="RichTextLabel" type="RichTextLabel" parent="Dialogo3"]
offset_left = -429.85065
offset_top = -377.61194
offset_right = 474.62695
offset_bottom = -98.50745
theme_override_colors/default_color = Color(0.29803923, 0.22745098, 0.13333334, 1)
theme_override_fonts/normal_font = ExtResource("7_q3xy6")
theme_override_font_sizes/normal_font_size = 51
text = "Recordá siempre prestar atención a los clientes para no cometer errores en las facturas. Papel de más es un gasto extra, te estaré mirando. "
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Flecha" type="TextureButton" parent="."]
offset_left = 951.0
offset_top = 194.99998
offset_right = 1122.0
offset_bottom = 366.0
scale = Vector2(0.67, 0.67)
mouse_behavior_recursive = 2
texture_normal = ExtResource("8_a46k3")
texture_pressed = ExtResource("9_7cehn")
texture_hover = ExtResource("9_7cehn")

[node name="AnimationDialogos" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ykg05")
}

[connection signal="pressed" from="Flecha" to="." method="_on_flecha_pressed"]
